data cleaning and merging

--- a/preproc.ipynb
+++ b/preproc.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +178,14 @@
     "for i in range(len(tfrom)):\n",
     "    data.append([1,locations[tfrom[i].upper()]['lat'],locations[tfrom[i].upper()]['lng'],locations[tto[i].upper()]['lat'],locations[tto[i].upper()]['lng'],\n",
     "               distance(locations[tfrom[i].upper()],locations[tto[i].upper()]),\n",
-    "               duration(tdepart[i],tarrival[i]),1,0,int(tprice[i][:-3])])\n",
+    "               tdepart[i],duration(tdepart[i],tarrival[i]),1,0,int(tprice[i][:-3])])\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
     "for i in range(len(tfrom)):\n",
     "    data.append([2,locations[tfrom[i].upper()]['lat'],locations[tfrom[i].upper()]['lng'],locations[tto[i].upper()]['lat'],locations[tto[i].upper()]['lng'],\n",
     "               distance(locations[tfrom[i].upper()],locations[tto[i].upper()]),\n",
-    "               duration(tdepart[i],tarrival[i]),1,0,int(tprice[i])])"
+    "                tdepart[i],duration(tdepart[i],tarrival[i]),1,0,int(tprice[i])])"
    ]
   },
   {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,9 +232,11 @@
     "tprice = covDF['price']\n",
     "tsex = covDF['driver_sex'].replace({\"Homme\":1,\"Femme\":2})\n",
     "tage = covDF['driver_age']\n",
+    "tdepart = covDF['time']\n",
     "for i in range(len(tfrom)):\n",
     "    data.append([3,locations[tfrom[i].upper()]['lat'],locations[tfrom[i].upper()]['lng'],locations[tto[i].upper()]['lat'],locations[tto[i].upper()]['lng'],\n",
     "               distance(locations[tfrom[i].upper()],locations[tto[i].upper()]),\n",
+    "                tdepart[i],\n",
     "               durationFromLoc(locations[tfrom[i].upper()],locations[tto[i].upper()]),\n",
     "                tsex[i],tage[i],int(tprice[i])])"
    ]
@@ -335,20 +337,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "for a in locations.values():\n",
     "    for b in locations.values():\n",
     "        if a!=b:\n",
-    "            data.append([4,a['lat'],a['lng'],b['lat'],b['lng'],distance(a,b),durationFromLoc(a,b),1,0,price_model.predict([[distance(a,b)]])[0]])\n",
+    "            data.append([4,a['lat'],a['lng'],b['lat'],b['lng'],distance(a,b),0,durationFromLoc(a,b),1,0,price_model.predict([[distance(a,b)]])[0]])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +359,7 @@
        "28395"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
