--- a/Bots/preproc.ipynb
+++ b/Bots/preproc.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "4   5   33   F       other"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,15 +1208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "hist = []\n",
     "m = len(users)\n",
     "for i in range(m):\n",
-    "    n = np.random.randint(500,701)\n",
-    "    dd = trips.sample(n,random_state=1)\n",
+    "    dd = trips.sample(1000,random_state=1)\n",
     "    for j in range(1,5):\n",
     "        tmp = dd.loc[dd['company']==j]\n",
     "        p = len(tmp)\n",
@@ -1239,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1257,16 +1256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "568878"
+       "943000"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,129 +1276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>company</th>\n",
-       "      <th>from_lat</th>\n",
-       "      <th>from_lan</th>\n",
-       "      <th>to_lat</th>\n",
-       "      <th>to_lan</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>depart</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>33.369975</td>\n",
-       "      <td>-7.587912</td>\n",
-       "      <td>34.229627</td>\n",
-       "      <td>-6.528318</td>\n",
-       "      <td>136.873942</td>\n",
-       "      <td>07:50</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>66.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>33.369975</td>\n",
-       "      <td>-7.587912</td>\n",
-       "      <td>34.229627</td>\n",
-       "      <td>-6.528318</td>\n",
-       "      <td>136.873942</td>\n",
-       "      <td>07:50</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>33.369975</td>\n",
-       "      <td>-7.587912</td>\n",
-       "      <td>34.229627</td>\n",
-       "      <td>-6.528318</td>\n",
-       "      <td>136.873942</td>\n",
-       "      <td>11:50</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>66.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>33.369975</td>\n",
-       "      <td>-7.587912</td>\n",
-       "      <td>34.229627</td>\n",
-       "      <td>-6.528318</td>\n",
-       "      <td>136.873942</td>\n",
-       "      <td>11:50</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>33.369975</td>\n",
-       "      <td>-7.587912</td>\n",
-       "      <td>34.229627</td>\n",
-       "      <td>-6.528318</td>\n",
-       "      <td>136.873942</td>\n",
-       "      <td>16:50</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>66.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   id  company   from_lat  from_lan     to_lat    to_lan    distance depart  \\\n",
-       "0   0        1  33.369975 -7.587912  34.229627 -6.528318  136.873942  07:50   \n",
-       "1   1        1  33.369975 -7.587912  34.229627 -6.528318  136.873942  07:50   \n",
-       "2   2        1  33.369975 -7.587912  34.229627 -6.528318  136.873942  11:50   \n",
-       "3   3        1  33.369975 -7.587912  34.229627 -6.528318  136.873942  11:50   \n",
-       "4   4        1  33.369975 -7.587912  34.229627 -6.528318  136.873942  16:50   \n",
-       "\n",
-       "   duration  price  \n",
-       "0      47.0   66.0  \n",
-       "1      90.0   50.0  \n",
-       "2      47.0   66.0  \n",
-       "3      90.0   50.0  \n",
-       "4      47.0   66.0  "
+       "943000"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,12 +1294,12 @@
     "trips = pd.read_csv('../datasources/trips.csv',delimiter=';')\n",
     "users = pd.read_csv('../datasources/users.csv',delimiter=';')\n",
     "history = pd.read_csv('../datasources/history.csv',delimiter=';')\n",
-    "trips.head()"
+    "len(history)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1505,7 @@
        "4   66.0        3  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,21 +1647,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n",
+      "err\n"
+     ]
+    }
+   ],
    "source": [
     "rt = []\n",
     "for i in range(len(history)):\n",
     "    try :\n",
     "        rt.append([history['user_id'][i],history['trip_id'][i],rating[str(int(history['comfort'][i]))+str(int(history['speed'][i]))+str(int(history['trafic'][i]))+str(int(history['security'][i]))+str(history['retard'][i])]])\n",
     "    except :\n",
+    "        print('err')\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,17 +1835,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.DataFrame(X,columns=['company', 'from_lat', 'from_lan', 'to_lat', 'to_lan', 'distance',\n",
-    "       'duration', 'price','session','age', 'sex', 'profition'])"
+    "       'duration', 'price','session','age', 'gender', 'profission'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1807,158 +1854,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>company</th>\n",
-       "      <th>from_lat</th>\n",
-       "      <th>from_lan</th>\n",
-       "      <th>to_lat</th>\n",
-       "      <th>to_lan</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>price</th>\n",
-       "      <th>session</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>profition</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>31.511828</td>\n",
-       "      <td>-9.762090</td>\n",
-       "      <td>31.625826</td>\n",
-       "      <td>-7.989161</td>\n",
-       "      <td>168.494895</td>\n",
-       "      <td>195.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>33.781005</td>\n",
-       "      <td>-7.161029</td>\n",
-       "      <td>34.044889</td>\n",
-       "      <td>-6.814017</td>\n",
-       "      <td>43.446220</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>33.599383</td>\n",
-       "      <td>-7.612313</td>\n",
-       "      <td>33.998312</td>\n",
-       "      <td>-6.854291</td>\n",
-       "      <td>82.933743</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>35.771443</td>\n",
-       "      <td>-5.786140</td>\n",
-       "      <td>34.230155</td>\n",
-       "      <td>-4.010104</td>\n",
-       "      <td>235.737054</td>\n",
-       "      <td>417.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>34.034653</td>\n",
-       "      <td>-5.016193</td>\n",
-       "      <td>34.044889</td>\n",
-       "      <td>-6.814017</td>\n",
-       "      <td>165.708180</td>\n",
-       "      <td>161.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   company   from_lat  from_lan     to_lat    to_lan    distance  duration  \\\n",
-       "0      1.0  31.511828 -9.762090  31.625826 -7.989161  168.494895     195.0   \n",
-       "1      1.0  33.781005 -7.161029  34.044889 -6.814017   43.446220      39.0   \n",
-       "2      1.0  33.599383 -7.612313  33.998312 -6.854291   82.933743      60.0   \n",
-       "3      1.0  35.771443 -5.786140  34.230155 -4.010104  235.737054     417.0   \n",
-       "4      1.0  34.034653 -5.016193  34.044889 -6.814017  165.708180     161.0   \n",
-       "\n",
-       "   price  session   age  sex  profition  rating  \n",
-       "0   80.0      3.0  24.0  1.0        0.0       3  \n",
-       "1   24.0      4.0  24.0  1.0        0.0       5  \n",
-       "2   40.0      3.0  24.0  1.0        0.0       5  \n",
-       "3  148.0      3.0  24.0  1.0        0.0       5  \n",
-       "4   85.0      2.0  24.0  1.0        0.0       5  "
+       "942847"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "len(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
