--- a/Bots/preproc.ipynb
+++ b/Bots/preproc.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
        "943000"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1505,7 +1505,7 @@
        "4   66.0        3  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1879,6 +1879,16 @@
    "outputs": [],
    "source": [
     "data.to_csv(\"dataset.csv\",sep=';',index = False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(rt,columns=['user_id','trip_id','rating'])\n",
+    "data.to_csv(\"dataset_ids.csv\",sep=';',index = False)"
    ]
   },
   {
