--- a/Bots/preproc.ipynb
+++ b/Bots/preproc.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,12 +396,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(data).to_csv('trips.csv',sep=';',header=[\"company\" ,\"from_lat\" ,\"from_lan\" ,\"to_lat\" ,\"to_lan\" ,\"distance\" ,\"depart\",\"duration\",\"dayofweek\",\"price\"])"
+    "pd.DataFrame(data).to_csv('../datasources/trips.csv',sep=';',header=[\"company\" ,\"from_lat\" ,\"from_lan\" ,\"to_lat\" ,\"to_lan\" ,\"distance\" ,\"depart\",\"duration\",\"dayofweek\",\"price\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "4      47.0          5   66.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "288.6470008"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,49 +1220,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "hist = []\n",
     "m = len(users)\n",
     "for i in range(m):\n",
-    "    dd = trips.sample(1000,random_state=1)\n",
+    "    dd = trips.sample(1200,random_state=200)\n",
     "    for j in range(1,5):\n",
     "        tmp = dd.loc[dd['company']==j]\n",
     "        p = len(tmp)\n",
     "        if j == 1:\n",
-    "            security = np.full(shape=p,fill_value=1)\n",
+    "            route = np.full(shape=p,fill_value=0)\n",
     "            trafic = np.full(shape=p,fill_value=0)\n",
     "            retard = np.round(np.random.normal(0.3, 0.1, p) * 60)\n",
-    "        else :\n",
-    "            security = np.round(np.random.normal(0.55, 0.1, p) * 1)\n",
+    "        else:\n",
+    "            route = np.round(np.random.normal(0.55, 0.1, p) * 1) + 1\n",
     "            retard = np.round(np.random.normal(0.3, 0.1, p) * 120)\n",
     "            trafic = []\n",
     "            for l in tmp['id']:\n",
-    "                if tmp['dayofweek'][l] == 0:\n",
-    "                    trafic.append(random.randint(0,2))\n",
     "                if tmp['dayofweek'][l] >=5:\n",
     "                    trafic.append(1)\n",
     "                else :\n",
     "                    trafic.append(0)\n",
     "        acc = []\n",
     "        for k,l in zip(range(p),tmp['id']):\n",
-    "            if trafic[k] == 0 and tmp['distance'][l] < 288:\n",
-    "                acc.append(0)\n",
+    "            if trafic[k] == 1 and tmp['distance'][l] > 288:\n",
+    "                acc.append(1)\n",
     "            else :\n",
-    "                acc.append(1)       \n",
+    "                acc.append(0)\n",
+    "        \n",
+    "        security = []\n",
+    "        for l in tmp['id']:  \n",
+    "            if tmp['session'][l] in [0,1,5] and tmp['duration'][l] <= 120:\n",
+    "                security.append(0)\n",
+    "            else:\n",
+    "                security.append(1)\n",
     "        for k,l in zip(range(p),tmp['id']):\n",
-    "            hist.append([users['id'][i],tmp['id'][l],trafic[k],security[k],retard[k],acc[k]])          "
+    "            hist.append([users['id'][i],tmp['id'][l],trafic[k],security[k],retard[k],acc[k],route[k]])          "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(hist).to_csv('history.csv',sep=';',header=[\"user_id\",\"trip_id\",\"trafic\",\"security\",\"retard\",\"accident\"],index= False)"
+    "pd.DataFrame(hist).to_csv('../datasources/history.csv',sep=';',header=[\"user_id\",\"trip_id\",\"trafic\",\"security\",\"retard\",\"accident\",\"route\"],index= False)"
    ]
   },
   {
